--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "build": "tsc",
     "format": "prettier --write '**/*.ts'",
     "format-check": "prettier --check '**/*.ts'",
+    "spell-check": "cspell lint --no-progress .",
     "lint": "eslint src/**/*.ts",
+    "checks": "npm run format-check && npm run lint && npm run spell-check",
     "package": "ncc build --source-map --license licenses.txt",
-    "test": "jest",
-    "all": "npm run build && npm run format && npm run lint && npm run package && npm test"
+    "test": "jest src --passWithNoTests",
+    "all": "npm run build && npm run checks && npm run lint && npm run package && npm test"
   },
   "repository": {
     "type": "git",
@@ -24,20 +26,30 @@
   ],
   "author": "",
   "license": "MIT",
+  "engines": {
+    "node": "16.x"
+  },
   "dependencies": {
     "@actions/core": "^1.10.0"
   },
   "devDependencies": {
-    "@types/node": "^18.15.13",
+    "@tsconfig/node16": "^1.0.3",
+    "@types/node": "^16.18.25",
     "@typescript-eslint/parser": "^5.59.0",
     "@vercel/ncc": "^0.36.1",
+    "cspell": "^6.31.1",
     "eslint": "^8.38.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-github": "^4.7.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "jest": "^29.5.0",
     "js-yaml": "^4.1.0",
     "prettier": "^2.8.7",
     "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   }
 }
